# Intel-Aero-data-client

./: CMakeLists.txt  README.md
src/: RealSenseInterface.cpp  RealSenseInterface.h  TcpHandler.h  ThreadMutexObject.h  tcp_logger.cpp  tcp_logger.h  tcp_logger_main.cpp
